# tauri-seaorm-react

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: build.yaml
src/: App.jsx  main.jsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: books.rs  constant.rs  lib.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: book_delete.rs  book_insert.rs  book_query.rs  book_update.rs  lib.rs
src-tauri/src/: main.rs
src-tauri/src/commands/: delete.rs  insert_function.rs  list.rs  mod.rs
src/components/: AddButton.jsx  MainNavgation.jsx  Tbody.jsx
src/pages/: Add.jsx  Book.jsx  Root.jsx
src/router/: index.jsx  routes.jsx
src/store/: book-slice.jsx  index.jsx
src/utils/: createWindow.jsx
