[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
# 导入entity模块
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "1.1.7" #
features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
]
[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }